RESOLVED FIXED62631
Web Inspector: reload from within inspector window does not work while debugger is paused.
https://bugs.webkit.org/show_bug.cgi?id=62631
Summary Web Inspector: reload from within inspector window does not work while debugg...
Pavel Feldman
Reported 2011-06-14 05:29:22 PDT
The ifdef (JSC) check is to blame.
Attachments
Patch (3.75 KB, patch)
2011-06-14 05:38 PDT, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2011-06-14 05:38:21 PDT
Pavel Feldman
Comment 2 2011-06-14 05:53:47 PDT
Note You need to log in before you can comment on or make changes to this bug.