2011-06-14  Pavel Feldman  <pfeldman@google.com>

Reviewed by Yury Semikhatsky.

        Web Inspector: reload from within inspector window does not work while debugger is paused.
        https://bugs.webkit.org/show_bug.cgi?id=62631

        * inspector/debugger/debugger-reload-on-pause-expected.txt: Added.
        * inspector/debugger/debugger-reload-on-pause.html: Added.
2011-06-14  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: reload from within inspector window does not work while debugger is paused.
        https://bugs.webkit.org/show_bug.cgi?id=62631

        Test: inspector/debugger/debugger-reload-on-pause.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::continueLoadAfterNavigationPolicy):

Canonical link: https://commits.webkit.org/78181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88792 268f45cc-cd09-0410-ab3c-d52691b4dbfc